Fix in build.sh and index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Hackfront</title>
@@ -42,6 +42,6 @@
   </div>
   <script type="text/javascript">
     {%LP_SCRIPT%}
-    
+
   </script>
 </body>
