--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
   <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-  <!-- INFO - Song:  Kenet & Rez - Unreal Super Hero 3 - https://youtu.be/9STiQ8cCIo0 -->
-  <!-- INFO - Video: Andy Fielding - Retro SciFi Green - https://youtu.be/GPQhIrp1AJ4 -->
+  <!-- INFO - Song:  Miami Nights 1984 - Accelerated - https://youtu.be/rDBbaGCCIhk -->
+  <!-- INFO - Video: VAPORWAVE - Infinite Background - https://youtu.be/Lup1qQXTebM -->
   <div id="bg-container">
     <video id="bg-video" loop muted autoplay disablePictureInPicture="true">
-      <source src="/res/video/GPQhIrp1AJ4_edit.mp4" type="video/mp4">
+      <source src="/res/video/Lup1qQXTebM.mp4" type="video/mp4">
     </video>
   </div>
   <div>
