--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-  <!-- INFO - Song:  Miami Nights 1984 - Accelerated - https://youtu.be/rDBbaGCCIhk -->
+  <!-- INFO - Song:  DiscoDeath - Robert Parker - https://youtu.be/VzE2bMB7_-A -->
   <!-- INFO - Video: VAPORWAVE - Infinite Background - https://youtu.be/Lup1qQXTebM -->
   <div id="bg-container">
     <video id="bg-video" loop muted autoplay disablePictureInPicture="true">
