Change style of play button

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     </video>
   </div>
   <div>
-    <button id="play-btn">play</button>
+    <button id="play-btn">PLAY</button>
     <center>
       <div id="header">
         <span class="big-1 text-vaporwave">WELCOME</span><br />
