--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
   <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
-  <!-- INFO - Song:  DiscoDeath - Robert Parker - https://youtu.be/VzE2bMB7_-A -->
+  <!-- INFO - Song:  Miami Nights 1984 - Accelerated - https://youtu.be/rDBbaGCCIhk -->
   <!-- INFO - Video: VAPORWAVE - Infinite Background - https://youtu.be/Lup1qQXTebM -->
   <div id="bg-container">
-    <video id="bg-video" loop muted autoplay disablePictureInPicture="true">
+    <video id="bg-video" loop muted autoplay playsinline="true">
       <source src="/res/video/Lup1qQXTebM.mp4" type="video/mp4">
     </video>
   </div>
