Edit home page links

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,9 @@
         <span class="big-1 text-vaporwave">WELCOME</span><br />
       </div>
       <div id="links">
-        <a href="https://cdn.hackfront.eu/">CDN Archive</a><br />
-        <a href="https://cloud.hackfront.eu/">HF Cloud</a><br />
+        <a href="https://cdn.hackfront.eu/">Media archive</a><br />
+        <a href="https://cloud.hackfront.eu/">Personal cloud</a><br />
         <a href="https://git.hackfront.eu/explore/repos">Git server</a><br />
-        <a href="https://apps.hackfront.eu/transmission/web/">Transmission</a><br />
       </div>
       <div id="footer">
         <span class="big-2">Contact</span><br />
